<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:background="#000000"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView"
        android:background="#ffffff"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/seven"
            android:layout_weight="1"
            android:id="@+id/button_seven" />
        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/eight"
            android:layout_weight="1"
            android:id="@+id/button_eight" />
        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/nine"
            android:layout_weight="1"
            android:id="@+id/button_nine" />
        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/plus"
            android:layout_weight="1"
            android:id="@+id/button_plus" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/four"
            android:layout_weight="1"
            android:id="@+id/button_four" />
        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/five"
            android:layout_weight="1"
            android:id="@+id/button_five" />
        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/six"
            android:layout_weight="1"
            android:id="@+id/button_six" />
        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/minus"
            android:layout_weight="1"
            android:id="@+id/button_minus" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/one"
            android:layout_weight="1"
            android:id="@+id/button_one" />
        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/two"
            android:layout_weight="1"
            android:id="@+id/button_two" />
        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/three"
            android:layout_weight="1"
            android:id="@+id/button_three" />
        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/multiply"
            android:layout_weight="1"
            android:id="@+id/button_multiply" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/point"
            android:layout_weight="1"
            android:id="@+id/button_point" />
        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/zero"
            android:layout_weight="1"
            android:id="@+id/button_zero" />
        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:id="@+id/button_cancel" />
        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/division"
            android:layout_weight="1"
            android:id="@+id/button_division" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/equal"
            android:layout_weight="1"
            android:id="@+id/button_equal" />
        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/clear"
            android:layout_weight="1"
            android:id="@+id/button_clear" />
    </LinearLayout>
</LinearLayout>
